tests/ui/hygiene/assoc_item_ctxt.stderr
error[E0407]: method `method` is not a member of trait `Tr`
  --> $DIR/assoc_item_ctxt.rs:33:13
   |
LL | /     macro mac_trait_impl() {
LL | |         impl Tr for u8 {
LL | |             fn method() {}
   | |             ^^^------^^^^^
   | |             |  |
   | |             |  help: there is an associated function with a similar name: `method`
   | |             not a member of trait `Tr`
LL | |         }
LL | |     }
   | |_____- in this expansion of `mac_trait_impl!`
LL |
LL |       mac_trait_impl!();
   |       ----------------- in this macro invocation

error[E0046]: not all trait items implemented, missing: `method`
  --> $DIR/assoc_item_ctxt.rs:32:9
   |
LL |           fn method();
   |           ------------ `method` from trait
...
LL | /     macro mac_trait_impl() {
LL | |         impl Tr for u8 {
   | |         ^^^^^^^^^^^^^^ missing `method` in implementation
LL | |             fn method() {}
LL | |         }
LL | |     }
   | |_____- in this expansion of `mac_trait_impl!`
LL |
LL |       mac_trait_impl!();
   |       ----------------- in this macro invocation

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0046, E0407.
For more information about an error, try `rustc --explain E0046`.
